# mug-cakes

./: Makefile  README.md  pyproject.toml  run.py  test-gp.ipynb  test_utils.py
mug_cakes/: __init__.py  bo.py  gp.py  kernel.py  simplex.py  utils.py
notebooks/: Untitled.ipynb  experiments.ipynb  gp-getting-started.ipynb  limiting.ipynb  scipy-normal.ipynb  test-gp.ipynb
paper/: Makefile  abstract.tex  acknowledgements.tex  acquisition.tex  bgp.tex  bo.tex  conclusion.tex  experiments.tex  gaussian.tex  gp.tex  intro.tex  kernels.tex  main.tex  mybib.bib  preamble.tex
paper/data/: experiments.txt
paper/scripts/: ei.py  experiments.py  posteriors.py  rbf.py  sample.py
presentation1/: main.tex  preamble.tex
presentation2/: Makefile  log  main.tex  preamble.tex
presentation2/scripts/: gp_samples.py  limiting_bo.py  limiting_constant.py  limiting_gp.py  limiting_linear.py  limiting_nonlinear.py  limiting_nonquad.py  limiting_quad.py  linear.py  rbf.py
test/: BO.py  test_bo.py  test_gp.py  test_kernel.py  test_simplex.py  test_utils.py  utils.py
